This commit creates a database and configures the project settings and env settings

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET_KEY = 'django-insecure-0a7&t^nqp$q2u0p5cf@h5-th_+vzo+&pc^cy&&ed)x&m@%wa-j'
 MODE='dev'
-DB_NAME=''
+DB_NAME='awards'
 DB_USER='moringa'
 DB_PASSWORD='1234'
 DB_HOST='127.0.0.1'
