--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ SECRET_KEY = 'django-insecure-0a7&t^nqp$q2u0p5cf@h5-th_+vzo+&pc^cy&&ed)x&m@%wa-j
 MODE='dev'
 DB_NAME='awards'
 DB_USER='moringa'
-DB_PASSWORD='1234'
+DB_PASSWORD='anna1'
 DB_HOST='127.0.0.1'
 CD_NAME='galeriemusingsbella'
 CD_API='778896998273489'
