--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-registration==3.1.2
 django-registration-redux==2.9
 django-tinymce==3.4.0
 djangorestframework==3.12.4
+gunicorn==20.1.0
 Pillow==8.4.0
 psycopg2==2.8.6
 pycodestyle==2.8.0
