--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ beautifulsoup4==4.10.0
 certifi==2021.10.8
 cloudinary==1.28.0
 confusable-homoglyphs==3.2.0
+dj-database-url==0.5.0
 Django==3.2.9
 django-bootstrap4==21.1
+django-heroku==0.3.1
 django-registration==3.1.2
 django-registration-redux==2.9
 django-tinymce==3.4.0
