Deployment to heroku

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ CD_NAME='galeriemusingsbella'
 CD_API='778896998273489'
 CD_SECRET='O9YWFRj325TE9wo_9XA20ZV-0SQ'
 CD_SECURE='True'
+ALLOWED_HOSTS = ['https://awardshubspot.herokuapp.com/']
